@@ -1,3 +1,6 @@
+2005-05-07 Craig Franklin <craigfranklin@users.sourceforge.net>
+  * [gpasm] Generate dependency file.
+
 2005-05-06 Craig Franklin <craigfranklin@users.sourceforge.net>
   * [gpvo] Added symbol export feature.
 
